DNAnexus Upload Agent 1.3.0 <support@dnanexus.com>, 2013-May-10
---------------------------------------------------------------
  * [PTFM-7309] [PTFM-7314] Upload Agent now supports revised File API
  * resolveProject() function now caches previously returned values 
  * Some minor cosmetic improvements

DNAnexus Upload Agent 1.2.12 <support@dnanexus.com>, 2013-May-6
---------------------------------------------------------------
  * We are now explicitly setting LC_ALL=C in "linux-older-kernel" build
    (this allows the older-kernel build to function correctly on newer
    systems too)

DNAnexus Upload Agent 1.2.11 <support@dnanexus.com>, 2013-May-3
---------------------------------------------------------------
  * [PTFM-6706] Use c-ares's ares_gethostbyname() to resolve ip address explicitly on 
    linux/mac, and gethostbyname() on windows. Also, added a new command line flag
    "--no-round-robin-dns" to disable this behavior.
  * Round robin DNS also works on windows
  * Adding special "User-Agent" string for UA compilation on older kernels
  * Some minor changes

DNAnexus Upload Agent 1.2.10 <support@dnanexus.com>, 2013-May-1
---------------------------------------------------------------
  * [PTFM-6706] UA now uses gethostbyname to do explicit DNS round robin
    (only for Linux & Mac versions).
  * [PTFM-6669] Uploading files >2GB should work on windows now.
  * UA should exit normally  when --help is used.
  * Fix for "file" command on old system (since they lack --mime-type flag)
  * Windows version will remain on libcurl 7.27 (UA with 7.30 fails to make libcurl
    requests properly for some reason). For that relaxed the relevant condition in main.cpp
  * Various other minor fixes

DNAnexus Upload Agent 1.2.9 <support@dnanexus.com>, 2013-Apr-22
---------------------------------------------------------------
  * Minor bug fix

DNAnexus Upload Agent 1.2.8 <support@dnanexus.com>, 2013-Apr-22
---------------------------------------------------------------