@@ -366,15 +366,13 @@ void Chunk::upload() {
     /** "respData" is a member variable of Chunk class*/
     checkConfigCURLcode(curl_easy_setopt(curl, CURLOPT_WRITEDATA, &respData), errorBuffer);
 
-    /*
-     * Set the Content-Length header.
-     */
+    
+    // Set the Content-Length header.
     {
       ostringstream clen;
       clen << "Content-Length: " << data.size();
       slist_headers = curl_slist_append(slist_headers, clen.str().c_str());
     }
-    checkConfigCURLcode(curl_easy_setopt(curl, CURLOPT_HTTPHEADER, slist_headers), errorBuffer);
 
     // Compute the MD5 sum of data, and add the Content-MD5 header
     expectedMD5 = dx::getHexifiedMD5(data);
@@ -384,6 +382,11 @@ void Chunk::upload() {
       slist_headers = curl_slist_append(slist_headers, cmd5.str().c_str());
     }
     
+    // Remove the Content-Type header (libcurl sets "Content-Type: application/x-www-form-urlencoded" by default for POST)
+    {
+      slist_headers = curl_slist_append(slist_headers, "Content-Type:");
+    }
+
     // Append additional headers requested by /file-xxxx/upload call
     for (dx::JSON::const_object_iterator it = headersToSend.object_begin(); it != headersToSend.object_end(); ++it) {
       ostringstream tempStream;
@@ -391,6 +394,8 @@ void Chunk::upload() {
       slist_headers = curl_slist_append(slist_headers, tempStream.str().c_str());
     }
 
+    checkConfigCURLcode(curl_easy_setopt(curl, CURLOPT_HTTPHEADER, slist_headers), errorBuffer);
+    
     log("Starting curl_easy_perform...");
     
     SIGPIPE_VARIABLE(pipe1);
